--- a/estilos/_header.scss
+++ b/estilos/_header.scss
@@ -14,6 +14,11 @@ header{
 
     img{
         margin-top: 0px;
+        transform: translateY(-45%);
+
+        @media (min-width:$min_w){
+            transform: translateY(0);
+        }
     }
 }
 
