--- a/estilos/_nosotros.scss
+++ b/estilos/_nosotros.scss
@@ -1,12 +1,15 @@
 @import'./variables';
 
 .nos{
-    margin-top: 100px;
+    transform: translateY(-10%);
+    z-index: 100;
+
     @include movil;
 
     @media (min-width:$min_w){
         justify-content: center;
         align-items: center;
+        transform: translateY(-35%);
         
         @include compu;
     }
@@ -14,7 +17,7 @@
     img{
         width: 90vw;
         height: auto;
-        z-index: 2;
+        z-index: 100;
 
         @media (min-width:$min_w){
             height: 660px;
