--- a/estilo.css
+++ b/estilo.css
@@ -97,26 +97,19 @@ header {
 }
 
 header img {
-  margin-top: 0px;
+  margin-top: 5px;
   -webkit-transform: translateY(-45%);
           transform: translateY(-45%);
 }
 
 @media (min-width: 990px) {
   header img {
+    margin-top: 40px;
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
 }
 
-/*.nav_bar{
-
-    input, label{
-        @media(min-width:$min_w){
-            display: none;
-        }
-    }
-}*/
 .menu {
   margin-top: 0;
   height: 35vh;
@@ -283,6 +276,12 @@ li a:active {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (min-width: 990px) {
@@ -308,10 +307,14 @@ li a:active {
   border: hidden;
   width: 40vw;
   height: auto;
-}
+  /*overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    scrollbar-width: 0;
 
-.spotify::-webkit-scrollbar {
-  display: none;
+    &::-webkit-scrollbar{
+        display: none;
+    }*/
 }
 
 @media (min-width: 990px) {
@@ -394,6 +397,10 @@ li a:active {
   }
 }
 
+#entrevistas h2 {
+  margin-bottom: 40px;
+}
+
 @media (min-width: 990px) {
   #entrevistas h2 {
     margin-left: 200px;
@@ -427,6 +434,11 @@ li a:active {
   width: 100%;
   height: auto;
   margin: 0;
+}
+
+.entrevistas img:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 @media (min-width: 990px) {
@@ -558,5 +570,10 @@ footer {
         -ms-flex-direction: row;
             flex-direction: row;
   }
+}
+
+.fab:hover {
+  -webkit-transform: scale(2);
+          transform: scale(2);
 }
 /*# sourceMappingURL=estilo.css.map */
