--- a/estilos/_entrevistas.scss
+++ b/estilos/_entrevistas.scss
@@ -2,6 +2,8 @@
 
 #entrevistas{
     h2{
+        margin-bottom: 40px;
+        
         @media(min-width:$min_w){
             margin-left: 200px;
         }
@@ -21,6 +23,10 @@
         width: 100%;
         height: auto;
         margin: 0;
+
+        &:hover{
+            transform: scale(1.3);
+        }
 
         @media (min-width:$min_w){
             width: 33%;
