--- a/estilos/_episodios.scss
+++ b/estilos/_episodios.scss
@@ -33,16 +33,13 @@
 .spotify{
     border-radius: 10px;
     border:hidden;
-    width: 40vw;
-    height: auto;
-    /*overflow: scroll;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    scrollbar-width: 0;
+    width: 80vw;
+    height: 232px;
+    overflow: hidden;
 
     &::-webkit-scrollbar{
         display: none;
-    }*/
+    }
 
     @media (min-width:$min_w){
         height: auto;
@@ -52,7 +49,7 @@
 
 .fondo{
     width: 100%;
-    height: 1000px;
+    height: 1300px;
     clip-path: polygon(0 4%, 100% 0%, 100% 96%, 0% 100%);
     z-index: -10;
 
